--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,13 +6,33 @@
   font-family: "Quicksand";
   color: #333;
 }
+.App{
+  /*background-image: url("https://media.istockphoto.com/id/929905082/vector/abstract-futuristic-blockchain-light-blue-background-vector-design-digital-network-technology.jpg?s=170667a&w=0&k=20&c=zna6CEWXkDAY9o1dWYYlwIjgOcwufdmd3aRxewFQTZg=");*/
+  /*background-color: #61a7e0;*/
+}
+
+body {
+  width:100%;
+  height: 100%;
+  /*background-color: #61a7e0;
+  background-image: url("https://media.istockphoto.com/id/929905082/vector/abstract-futuristic-blockchain-light-blue-background-vector-design-digital-network-technology.jpg?s=170667a&w=0&k=20&c=zna6CEWXkDAY9o1dWYYlwIjgOcwufdmd3aRxewFQTZg=");*/
+  /*background-image: url('https://ordinaryfaith.net/wp-content/uploads/2016/03/Gray-plain-website-background.jpg');*/
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+#root{
+  /*width:100%;
+  height: 100%;
+  background-color: #61a7e0;*/
+}
 .navbar {
+  background-color: #ffff;
   padding: 20px;
   display: flex;
   align-items: center;
   max-width: 900px;
   margin: 0 auto;
-  border-bottom: 1px solid #f2f2f2;
+  border-bottom: 3px solid #3434;
 }
 .navbar h1 {
   color: #f1356d;
@@ -51,7 +71,7 @@
 .item{
   color: black;
    outline: 0;
-   background: #f2f2f2;
+   background: #eee0e0;
    width: 100%;
    border: 0;
    min-height: 15%;
@@ -63,6 +83,86 @@
    box-sizing: border-box;
    font-size: 14px;
  border-radius:10px;
+ }
+
+ .login{
+  color: black;
+  position: relative;
+   outline: 0;
+   background: #f2f2f2;
+   width: 100%;
+   border: 0;
+   text-align: center;
+   align-items: center;
+   min-height: 15%;
+   padding-top: 8px;
+   padding-bottom: 17px;
+   padding-left: 15px;
+   margin-bottom: 15px;
+   margin-left: 2%;
+   box-sizing: border-box;
+   font-size: 14px;
+ border-radius:10px;
+ }
+
+ .profile{
+  color: black;
+   outline: 0;
+   background: #f2f2f2;
+   width: 80%;
+   border: 0;
+   min-height: 15%;
+   padding-top: 8px;
+   padding-bottom: 17px;
+   padding-left: 15px;
+   margin-bottom: 15px;
+   margin-left: 10%;
+   font-size: 14px;
+ border-radius:10px;
+ }
+
+ .login p {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+ .doc_search_bar{
+  color: black;
+   outline: 0;
+   background: #000000;
+   width: 100%;
+   border: 0;
+   min-height: 15%;
+   padding-top: 8px;
+   padding-bottom: 17px;
+   padding-left: 15px;
+   margin: 0 auto;
+   margin-bottom: 15px;
+   margin-left: 2%;
+   margin-top: 0;
+   box-sizing: border-box;
+   font-size: 14px;
+ }
+ .actions_bar{
+  color: black;
+   outline: 0;
+   background: #eee5e5;
+   width: 100%;
+   border: 0;
+   min-height: 50px;
+   padding-top: 8px;
+   padding-bottom: 17px;
+   padding-left: 15px;
+   margin: 0 auto;
+   margin-bottom: 15px;
+   margin-left: 2%;
+   margin-top: 0;
+   box-sizing: border-box;
+   font-size: 14px;
  }
  .btn{
    width : 15%;
@@ -92,6 +192,187 @@
    border-color: black;
    background-color: green;
  }
+ .approveClaim{
+  width : 20%;
+  color: white;
+  float: right;
+  margin-right: 10%;
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  box-sizing: border-box;
+  border-radius:5px;
+  border-color: black;
+  background-color: green;
+}
+ .rejectClaim{
+  width : 20%;
+  color: white;
+  float: right;
+  margin-right: 10%;
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  box-sizing: border-box;
+  border-radius:5px;
+  border-color: black;
+  background-color: rgb(128, 4, 0);
+}
+ .new_doc_button{
+  width : 25%;
+  color: rgb(14, 13, 13);
+  float: right;
+  margin-right: 5%;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  box-sizing: border-box;
+  border-radius:15px;
+  border-color: rgb(241, 231, 231);
+  background-color: rgb(230, 226, 12);
+}
+
+.refresh_button{
+  width : 25%;
+  color: rgb(14, 13, 13);
+  float: right;
+  margin-right: 5%;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  box-sizing: border-box;
+  border-radius:15px;
+  border-color: rgb(241, 231, 231);
+  background-color: rgb(230, 30, 12);
+}
+
+.form {
+  border-radius: 40px;
+  position: relative;
+  z-index: 1;
+  background: #48c9b0;
+  max-width: 360px;
+  margin: 0 auto 100px;
+  padding: 45px;
+  text-align: center;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  
+}
+.form input[type=text]{
+  font-family: "FontAwesome", "Roboto", sans-serif;
+  outline: 0;
+  background: #f2f2f2;
+  width: 100%;
+  border: 0;
+  margin: 0 0 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 14px;
+border-radius:10px;
+  
+}
+
+.form input[type=date]{
+  font-family: "FontAwesome", "Roboto", sans-serif;
+  outline: 0;
+  background: #f2f2f2;
+  width: 60%;
+  border: 0;
+  margin: 0 0 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 14px;
+border-radius:10px;
+  
+}
+
+.form input[type=button] {
+  width: 50%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.form input[type=file] {
+  width: 80%;
+  background-color: #e6eb53;
+  color: black;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.form select{
+  font-family: FontAwesome, "Roboto", sans-serif;
+  outline: 0;
+  background: #f2f2f2;
+  width: 100%;
+  border: 0;
+  margin: 0 0 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 14px;
+  border-radius:10px;
+}
+
+.form button {
+  font-family: "Titillium Web", sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+  letter-spacing: .1em;
+  outline: 0;
+  background: #17a589;
+  width: 100%;
+  border: 0;
+border-radius:30px;
+  margin: 0px 0px 8px;
+  padding: 15px;
+  color: #FFFFFF;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.3 ease;
+  cursor: pointer;
+  transition: all 0.2s;
+
+}
+.form button:hover,.form button:focus {
+  background: #148f77;
+   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  transform: translateY(-4px);
+}
+.form button:active {
+  transform: translateY(2px);
+  box-shadow: 0 2.5px 5px rgba(0, 0, 0, 0.2);
+}
+
+.form .message {
+  
+  margin: 6px 6px;
+  color: #808080;
+  font-size: 11px;
+  text-align: center;
+  font-weight: bold;
+  font-style: normal;
+
+  
+
+}
+.form .message a {
+  color: #FFFFFF;
+  text-decoration: none;
+  font-size: 13px;
+}
+.form .register-form {
+  display: none;
+}
 
  .ListItemTitle{
   font-size:25px;
@@ -152,6 +433,130 @@
 .topnav .search-container button:hover {
   background: #ccc;
 }
+
+.Tile {
+  border-radius: 40px;
+  position: relative;
+  z-index: 1;
+  background: #48c9b0;
+  max-width: 360px;
+  margin: 0 auto 10px;
+  padding: 45px;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  
+}
+.Tile input[type=text]{
+  font-family: "FontAwesome", "Roboto", sans-serif;
+  outline: 0;
+  background: #f2f2f2;
+  width: 100%;
+  border: 0;
+  margin: 0 0 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 14px;
+border-radius:10px;
+  
+}
+
+.Tile input[type=date]{
+  font-family: "FontAwesome", "Roboto", sans-serif;
+  outline: 0;
+  background: #f2f2f2;
+  width: 60%;
+  border: 0;
+  margin: 0 0 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 14px;
+border-radius:10px;
+  
+}
+
+.Tile input[type=button] {
+  width: 50%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.Tile input[type=file] {
+  width: 80%;
+  background-color: #e6eb53;
+  color: black;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.Tile select{
+  font-family: FontAwesome, "Roboto", sans-serif;
+  outline: 0;
+  background: #f2f2f2;
+  width: 100%;
+  border: 0;
+  margin: 0 0 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 14px;
+  border-radius:10px;
+}
+
+.Tile button {
+  font-family: "Titillium Web", sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+  letter-spacing: .1em;
+  outline: 0;
+  background: #17a589;
+  width: 100%;
+  border: 0;
+border-radius:30px;
+  margin: 0px 0px 8px;
+  padding: 15px;
+  color: #FFFFFF;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.3 ease;
+  cursor: pointer;
+  transition: all 0.2s;
+
+}
+.Tile  button:hover,.form button:focus {
+  background: #148f77;
+   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  transform: translateY(-4px);
+}
+.Tile button:active {
+  transform: translateY(2px);
+  box-shadow: 0 2.5px 5px rgba(0, 0, 0, 0.2);
+}
+
+.Tile .message {
+  
+  margin: 6px 6px;
+  color: #808080;
+  font-size: 11px;
+  text-align: center;
+  font-weight: bold;
+  font-style: normal;
+
+  
+
+}
+.Tile  .message a {
+  color: #FFFFFF;
+  text-decoration: none;
+  font-size: 13px;
+}
+.Tile  .register-form {
+  display: none;
+}
+
 
 @media screen and (max-width: 600px) {
   .topnav .search-container {
